# AntiMEV

./: README.md
App/api/: Oracle.json  package-lock.json  package.json  server.js
App/client/: README.md  index.html  package-lock.json  package.json
App/client/src/: App.jsx  ResultModal.css  client.css  main.jsx
Contracts/: Caller.sol  Oracle.sol  hardhat.config.ts  package-lock.json  package.json
Contracts/contracts/: Caller.sol  Oracle.sol
Contracts/contracts/interfaces/: ICaller.sol  IOracle.sol
Contracts/flattened/: CallerContract.sol  GNNOracle.sol
Contracts/scripts/: deploy.ts
Frontend/: README.md  package-lock.json  package.json
Frontend/src/: circle.css
Frontend/src/components/: Billing.jsx  Business.jsx  Button.jsx  Circle.jsx  Hero.jsx  Navbar.jsx
GNN/: arbinet.py  main.py  model.pth  predict.py
Powerloom/: README.md
Powerloom/lassie/: .sample.env  script.py
Powerloom/py_ipfs_client/: README.md  pyproject.toml
Powerloom/py_ipfs_client/ipfs_client/: dag.py  default_logger.py  exceptions.py  main.py
Powerloom/py_ipfs_client/ipfs_client/settings/: data_models.py
Powerloom/py_ipfs_client/ipfs_client/tests/: add_bytes_test.py  add_invalid_json_test.py  add_json_test.py  add_str_test.py  concurrent_requests_test.py  init_read_bytes_test.py  init_read_test.py  init_remote_pinning_test.py  large_data_upload_test.py  logger_debug_test.py  remote_pinning_service_already_present_test.py
Powerloom/py_ipfs_client/ipfs_client/utils/: __init__.py  addr.py
TrainArbinet/: run.sh  training.py
backend/: fetch.js  run_scripts.js  script.js
(+26 files in other folders)
